--- a/departamental 2/ejercicio8_ECC.html
+++ b/departamental 2/ejercicio8_ECC.html
@@ -69,31 +69,31 @@
                with font-awesome or any other icon font library -->
 
           <li class="nav-item">
-            <a href="ejercicio5_JCH.html" class="nav-link">
+            <a href="ejercicio5_ECC.html" class="nav-link">
               <i class="nav-icon far fa-image"></i>
               <p>
                 Calculadora Básica
               </p>
             </a>
-            <a href="ejercicio6_JCH.html" class="nav-link">
+            <a href="ejercicio6_ECC.html" class="nav-link">
               <i class="nav-icon far fa-image"></i>
               <p>
                 Calculadora Científica
               </p>
             </a>
-            <a href="ejercicio7_JCH.html" class="nav-link">
+            <a href="ejercicio7_ECC.html" class="nav-link">
               <i class="nav-icon far fa-image"></i>
               <p>
                 Coversor de Unidades
               </p>
             </a>
-            <a href="ejercicio8_JCH.html" class="nav-link active">
+            <a href="ejercicio8_ECC.html" class="nav-link active">
               <i class="nav-icon far fa-image"></i>
               <p>
                 CRUD Denominación
               </p>
             </a>
-            <a href="ejercicio9_JCH.html" class="nav-link">
+            <a href="ejercicio9_ECC.html" class="nav-link">
               <i class="nav-icon far fa-image"></i>
               <p>
                 Validación de electivas
