--- a/departamental 2/ejercicio5_ECC.html
+++ b/departamental 2/ejercicio5_ECC.html
@@ -190,7 +190,7 @@
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
           <li class="nav-item">
-            <a href="ejercicio5_JCH.html" class="nav-link active">
+            <a href="ejercicio5_ECC.html" class="nav-link active">
               <i class="nav-icon far fa-image"></i>
               <p>
                 Calculadora Básica
@@ -198,7 +198,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="ejercicio6_JCH.html" class="nav-link">
+            <a href="ejercicio6_ECC.html" class="nav-link">
               <i class="nav-icon far fa-image"></i>
               <p>
                 Calculadora Científica
@@ -206,7 +206,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="ejercicio7_JCH.html" class="nav-link">
+            <a href="ejercicio7_ECC.html" class="nav-link">
               <i class="nav-icon far fa-image"></i>
               <p>
                 Conversor de unidades
@@ -214,7 +214,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="ejercicio8_JCH.html" class="nav-link">
+            <a href="ejercicio8_ECC.html" class="nav-link">
               <i class="nav-icon far fa-image"></i>
               <p>
                 CRUD Denominación
@@ -222,7 +222,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="ejercicio9_JCH.html" class="nav-link">
+            <a href="ejercicio9_ECC.html" class="nav-link">
               <i class="nav-icon far fa-image"></i>
               <p>
                 Validación de electivas
