--- a/departamental 2/ejercicio7_ECC.html
+++ b/departamental 2/ejercicio7_ECC.html
@@ -95,7 +95,7 @@
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
           <li class="nav-item">
-            <a href="ejercicio5_JCH.html" class="nav-link">
+            <a href="ejercicio5_ECC.html" class="nav-link">
               <i class="nav-icon far fa-image"></i>
               <p>
                 Calculadora Básica
@@ -103,7 +103,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="ejercicio6_JCH.html" class="nav-link">
+            <a href="ejercicio6_ECC.html" class="nav-link">
               <i class="nav-icon far fa-image"></i>
               <p>
                 Calculadora Científica
@@ -111,7 +111,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="ejercicio7_JCH.html" class="nav-link active">
+            <a href="ejercicio7_ECC.html" class="nav-link active">
               <i class="nav-icon far fa-image"></i>
               <p>
                 Conversor de unidades
@@ -119,7 +119,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="ejercicio8_JCH.html" class="nav-link">
+            <a href="ejercicio8_ECC.html" class="nav-link">
               <i class="nav-icon far fa-image"></i>
               <p>
                 CRUD Denominación
@@ -127,7 +127,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="ejercicio9_JCH.html" class="nav-link">
+            <a href="ejercicio9_ECC.html" class="nav-link">
               <i class="nav-icon far fa-image"></i>
               <p>
                 Validación de electivas
